--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/base/_typography.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/base/_typography.scss
@@ -40,7 +40,6 @@ h6, .zeta {
   color: darken($mid-grey, 15%);
   font-family: $maven-pro;
   line-height: 1.2em;
-
   a {
     color: inherit;
     text-decoration: none;
@@ -80,7 +79,7 @@ h6, .zeta {
 p,
 %p {
   margin: 0;
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
 }
 p + img {
   float: left;
