--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/blocks/_review.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/blocks/_review.scss
@@ -7,14 +7,17 @@
       display: none;
     }
     .description {
-      @extend .beta;
-      float: left;
+      display: none;
     }
     .field--name-field-edit {
-      margin-left: $horz-spacing-unit;
       float: left;
+      height: 2.5rem;
       a.button {
-        height: 2em;
+        height: 2rem;
+        background-color: $button-color-secondary;
+        &:hover {
+          background-color: darken($button-color-secondary, 10%);
+        }
       }
     }
     .group-location-content {
@@ -23,6 +26,7 @@
   }
   .field--name-field-subheading {
     @extend .gamma;
+    @include font-size(26px);
   }
   .group-visual .description {
     @include prepend-icon-visual;
@@ -49,7 +53,7 @@
   .group_mobility, .group_visual, .group_hearing {
     .rate-field-label {
       @include rating-label;
-      width: 20em;
+      width: 20rem;
     }
     .rate-widget {
       float: left;
@@ -59,7 +63,7 @@
 
 @include at-breakpoint($desk) {
   .field--name-field-latitude, .field--name-field-category {
-    float: left;
-    margin-right: $horz-spacing-unit;
+    float: right;
+    margin-left: 1rem;
   }
 }
