--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/blocks/_ratings.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/blocks/_ratings.scss
@@ -1,7 +1,7 @@
 @mixin rating-label {
   float: left;
-  width: 50%;
-  margin-right: $horz-spacing-unit;
+  width: 55%;
+  margin-right: 1rem;
   line-height: 2em;
 }
 
