styled buttons uniformly

--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/blocks/_review.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/blocks/_review.scss
@@ -16,7 +16,8 @@
         height: 2rem;
         background-color: $button-color-secondary;
         &:hover {
-          background-color: darken($button-color-secondary, 20%);
+          background-color: lighten($button-color-secondary, 20%);
+          color: white;
         }
       }
     }
