--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/utility/abstractions/_button.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/utility/abstractions/_button.scss
@@ -1,16 +1,13 @@
 @import 'buttons/options';
 @import 'buttons/glow';
 
-@mixin button() {
+@mixin button($color: $dark-grey) {
   display: inline-block;
   height: 2rem;
   margin: 0;
   padding: 0 1.2rem;
-
-  background-color: $dark-grey;
-
+  background-color: $color;
   border: none;
-
   color: #FFF;
   font-weight: 700;
   font-family: inherit;
@@ -19,7 +16,6 @@
   letter-spacing: 0.15em;
   text-transform: uppercase;
   white-space: nowrap;
-
   overflow: visible;
   cursor: pointer;
 
@@ -32,7 +28,7 @@
   }
 
   &:hover {
-    background-color: $mid-grey;
+    background-color: lighten($color, 20%);
   }
 
   &:active,
